Speech Recognition and Microphone Recognition
Added speech recongition and microhpone recognition
credit to - https://stackoverflow.com/questions/43834119/how-to-implement-speech-to-text-via-speech-framework

--- a/QwikNews/Info.plist
+++ b/QwikNews/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app uses your microphone to record what you say, so watch what you say!</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app will use your microphone to select your category.</string>
 </dict>
 </plist>
